Mangled up the TODO Minor typo fix in Socket WebUI is being overhauled TextConsole now supports overloadable ConsoleIn ConsoleOut :)

--- a/docs/TODO
+++ b/docs/TODO
@@ -23,6 +23,8 @@ Pre-Release Tasks
 
  - Add nasm into cygwin environment
 
+ - Write a new introduction and place into ./README
+
  - Send ey4s hookers and booze
  
  
