Removed SnortMask/ANTINIDS by request of marty. They will have fixes out by CSW, SnortMask stuff can be demo'd then, will inclide options in the 2.1 rls of msf.

--- a/docs/TODO
+++ b/docs/TODO
@@ -5,6 +5,10 @@ Pre-Release Tasks
  - Flush out Pex::x86
 
  - Add raw mode support to Pex::Socket (spoof)
+    * How do we handle Spoof option on non-UDP socket
+    * How is recv() handled, we dont want to break exploits
+    * Raw mode sets DF flag right now, cant send > MTU
+ 
  - Exchange exploit sucks, remove it or fix it
 
 
