Docs docs docs.

--- a/docs/userguide.tex
+++ b/docs/userguide.tex
@@ -10,13 +10,10 @@
 \begin{document}
 
 \title{Metasploit Framework User Guide}
-\author{H D Moore}
+\author{metasploit.com}
 
 \begin{titlepage}
     \begin{center}
-       % \begin{picture}(0,0)
-       %     \put(-75, -25){\includegraphics{logo}}
-       % \end{picture}
         \ \\[10mm]
         \url{http://www.metasploit.com/}
 
