User docs.. adding images..

--- a/docs/userguide.tex
+++ b/docs/userguide.tex
@@ -15,9 +15,10 @@
 \begin{titlepage}
     \begin{center}
         \ \\[10mm]
-        \url{http://www.metasploit.com/}
-
-        \ \\[10mm]
+		\includegraphics{images/logo.png}		
+		
+        \url{http://www.metasploit.com/} 
+		\ \\[50mm]
 
         \huge{Metasploit Framework User Guide} \\[120mm]
         \rule{10cm}{1pt} \\[4mm]
